修改用户详情url调整
